st patrick's day

--- a/selectdropdown_springbreak.html
+++ b/selectdropdown_springbreak.html
@@ -19,7 +19,7 @@
         
 		});
         $("#deptname").change(function(){
-            var dept = $('#deptname option:selected')[0].innerHTML; 
+            var dept = $('#deptname option:selected').html(); 
             //innerHTML is dept name
             $('#courses').empty(); //clears courses
 
@@ -27,19 +27,43 @@
                 console.log(response.result);
                 var courses = response.result.coursehistories;
                 for (var i=0; i<courses.length; i++){ 
+
+                //var id = response.result.coursehistories[i].id;
                 //iterating through the courses of the dept
-                     $("#courses").append('<option value="'+ courses[i].name + '">' + courses[i].name + '</option>');
+                     $("#courses").append('<option value="'+ courses[i].id + '">' + courses[i].name + '</option>');
                 }
                 
-            var id = response.result.coursehistories.id;
 
 
-             $.getJSON(baseurl + "courses/" + id + "/reviews" + token; function(response) {
-                console.log()
-             }
+            // $.getJSON(baseurl + "courses/" + id + "/reviews" + token; function(response) {
+            //    console.log();
+             //}
 
 
             })
+        })
+
+        $("#courses").change(function(){
+            var id = $('#courses option:selected').val();
+
+             $.getJSON(baseurl + "coursehistories/" + id + "/reviews" + token, function(response) {
+                var total = 0;  
+                var count = 0;
+                for (var i = 0; i < response.result.values.length; i++) {
+                    var score = response.result.values[i].ratings.rDifficulty;
+                    if (score != undefined) {
+                        total = total + parseFloat(score);
+                        count++;
+                    //console.log("rating " + response.result.values[i].ratings.rDifficulty);
+                    }
+                }
+                console.log(total);
+                console.log(response.result.values.length);
+                var difficulty = total / count;
+
+
+               console.log(difficulty);
+             });
         })
 
 
