color the table

--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@ th, td
 	padding-bottom:5px;
 }
 
+td.courses {
+	color: blue;
+}
+
+td.difficulty {
+	color: green;
+}
+
+td.id {
+	color: red;
+}
+
+
 select {
   font-size: 25px;
 }
@@ -56,7 +69,6 @@ select {
 	<div class = "container">
 	<p><br>Pick a department and we'll find out what's the easiest course!</p>
 	<select id = "depts">
-		<option value="all">All Departments</option>
 	</select>
 		
 	<div id = "easiest"></div><br></div>
